--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html>
     <head>
         <link rel="stylesheet" href="style.css"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        @media only screen and (max-width: 620px) {
+            /* For mobile phones: */
+            .menu, .main, .right {
+              width: 100%;
+            }
+          }
     </head>
     <body>
      <!-- header section starts      -->
